- Patch to client.py and roundup-server needed by REST-API
  code. Support OPTIONS verb and prevent hangs when processing a verb
  other than GET that doesn't have a payload. E.G. DELETE, PATCH or
  OPTIONS. Verbs like PUT and POST usually have payloads, so this
  patch doesn't touch processing of these methods. (John Rouillard)

Fixed:

- issue2550811: work around Unicode encoding issues in jinja2 template
  by explicitly converting data to Unicode; also fixed pagination and
  selecting columns to display in the issues list (Christof Meerwald)
- issue2550988: fixed fallback to pseudo random number generator in
  case SystemRandom isn't available, prefer use of secrets module if
  available (Python 3.6+) (Christof Meerwald)
- issue2550993: fixed edit CSV action to update restored items to the
  new value instead of restoring with the previous value (Christof
  Meerwald)
- issue2550994: avoid breakage caused by use of backports of Python 3
  configparser module to Python 2. (Joseph Myers)
- Make non-existent items in history not cause a traceback (Ralf
  Schlatterbeck)
- issue2550722: avoid errors from selecting "no selection" on
  multilink. (Joseph Myers)
- issue2550992: avoid errors from invalid Authorization
  headers. (Joseph Myers)


2018-07-13 1.6.0

Features:

- issue2550894: migrate test suite and run_test.py to py.test (John Kristensen)
- issue2550880: Ability to choose password store scheme and SSHA
  support. Discussion on devel list is tending in favor of this patch.
  Embedded test works, my manual test with a SSHA password
  assigned to a user allowed the user to log in.   Ran the test suite
  and the tests that were not skipped passed. (applied by John Rouillard)
- New Link/Multilink property attribute 'msg_header_property', can be
  used to configure additional headers in outgoing emails. See
  documentation in ``doc/customizing.txt``. (Ralf Schlatterbeck)
- Allow multiple file uploads: If the html template specifies