@@ -43,6 +43,11 @@ Features:
   other than GET that doesn't have a payload. E.G. DELETE, PATCH or
   OPTIONS. Verbs like PUT and POST usually have payloads, so this
   patch doesn't touch processing of these methods. (John Rouillard)
+- issue2550833: the export_csv web action now returns labels/names
+  rather than id's. Replace calls to export_csv with the export_csv_id
+  action to return the same data as the old export_csv action. (Tom
+  Ekberg (tekberg), Andreas (anrounham14) edited/applied and tests
+  created by John Rouillard)
 
 Fixed:
 
